--- a/src/app/components/add-sport-tournament/add-sport-tournament.component.html
+++ b/src/app/components/add-sport-tournament/add-sport-tournament.component.html
@@ -30,7 +30,7 @@
                         <td>{{ cnt.tournamentname }}</td> 
                         <td>  
                                 <button  class="btn btn btn-success">Edit</button> |
-                            <button (click)="delete(cnt.sportTournamentId)"  class="btn btn btn-danger">Delete</button>
+                            <button (click)="delete(cnt.betTypeMarketID)"  class="btn btn btn-danger">Delete</button>
                         </td>  
                     </tr>  
                 </tbody>  
