--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
           <li><a [routerLink]="['MergeJoin']">Quick Map</a></li>
           <li><a  [routerLink]="['AddEvents']" >Assign Event to Tournament</a></li>
           <li><a [routerLink]="['AddMarketBettype']">Asign Bet Types to Markets</a></li>
-          <li><a [routerLink]="['AddEvents']">Asign Odds Types to Events</a></li>
+          <li><a [routerLink]="['AddTournamentBettype']">Asign Bet Types to Tournament</a></li>
         </ul>
       </li>
       <li>
