--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,7 @@
           <li><a  [routerLink]="['AddEvents']" >Assign Event to Tournament</a></li>
           <li><a [routerLink]="['AddMarketBettype']">Asign Bet Types to Markets</a></li>
           <li><a [routerLink]="['AddTournamentBettype']">Asign Bet Types to Tournament</a></li>
+          <li><a [routerLink]="['AddOdds']">Asign Odds to Tournament</a></li>
         </ul>
       </li>
       <li>
