--- a/src/app/components/add-sport-tournament/add-sport-tournament.component.html
+++ b/src/app/components/add-sport-tournament/add-sport-tournament.component.html
@@ -22,6 +22,7 @@
                 <tbody>  
                     <tr *ngFor="let cnt of sportcountry">  
                       
+                     
                         <td>{{ cnt.countryname }}</td>  
                         <td>  <img src="https://www.countryflags.io/{{cnt.flagurl}}/flat/64.png" alt=""> </td>  
                         <td>{{ cnt.sportname }}</td>  
@@ -30,7 +31,7 @@
                         <td>{{ cnt.tournamentname }}</td> 
                         <td>  
                                 <button  class="btn btn btn-success">Edit</button> |
-                            <button (click)="delete(cnt.betTypeMarketID)"  class="btn btn btn-danger">Delete</button>
+                            <button (click)="delete(cnt.sportTournamentId)"  class="btn btn btn-danger">Delete</button>
                         </td>  
                     </tr>  
                 </tbody>  
