--- a/src/app/components/add-sport-country/add-sport-country.component.html
+++ b/src/app/components/add-sport-country/add-sport-country.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid">
-    <div class="row">
+<div class="container-fluid ">
+    <div class="row slide-top">
     
             
-        <div class="col-md-6  table-holder">
+        <div class="col-md-6  table-holder ">
             <p *ngIf="!sportCountryVm"><em>Loading...</em></p>  
   
             <div class="mt-4">
