--- a/src/app/components/add-bet-type/add-bet-type.component.html
+++ b/src/app/components/add-bet-type/add-bet-type.component.html
@@ -21,7 +21,7 @@
                     <tr *ngFor="let cnt of bettype">  
                         <td>{{ cnt.bettype }}</td>  
                         <td>  
-                                <button  class="btn btn btn-success">Edit</button> |
+                                <button  (click)="LoadDataForEdit(cnt.betypeid)" class="btn btn btn-success">Edit</button> |
                             <button (click)="delete(cnt.betypeid)"  class="btn btn btn-danger">Delete</button>
                         </td>  
                     </tr>  
@@ -37,8 +37,9 @@
                   </div>
                
                 </div>
-                <button (click)="onFormSubmit()" style="margin-top: 10px; background-color: #7386d5; border-radius: 0%; border: none;" class="btn btn btn-primary btn-block">Add</button>
-              </form>
+                <button (click)="onFormSubmit()" style="margin-top: 10px; background-color: #7386d5; border-radius: 0%; border: none;" class="btn btn btn-primary btn-block">{{title}}</button>
+               
+            </form>
               <div class="watermark">
                 <img src="https://inm-baobab-prod-eu-west-1.s3.amazonaws.com/public/inm/media/image/115382043.JPG" width="300px" alt="">
           </div>
