--- a/src/app/components/tournamentbettyoe/tournamentbettyoe.component.html
+++ b/src/app/components/tournamentbettyoe/tournamentbettyoe.component.html
@@ -68,7 +68,7 @@
                
                 <button (click)="onFormSubmit()" style="margin-top: 10px; background-color: #7386d5; border-radius: 0%; border: none;" class="btn btn btn-primary btn-block">Map</button>
               </div> 
-              <div class="watermark">
+              <div class="watermark scale-in-ver-top">
                 <img src="https://inm-baobab-prod-eu-west-1.s3.amazonaws.com/public/inm/media/image/115382043.JPG" width="300px" alt="">
           </div>
         </div>
