--- a/src/app/components/add-markets/add-markets.component.html
+++ b/src/app/components/add-markets/add-markets.component.html
@@ -39,10 +39,10 @@
                 </div>
                 <button (click)="onFormSubmit()" style="margin-top: 10px; background-color: #7386d5; border-radius: 0%; border: none;" class="btn btn btn-primary btn-block">{{title}}</button>
                 <ng-template [ngIf]="count===0">
-                    <button (click)="resertForm()" style="margin-top: 10px; background-color: #d2c14d; border-radius: 0%; border: none;" class="btn btn btn-primary btn-block">Cancel</button>
+                    <button (click)="resertForm()" style="margin-top: 10px; background-color: #d2c14d; border-radius: 0%; border: none;" class="btn btn btn-primary btn-block scale-in-ver-top">Cancel</button>
                 </ng-template>   
             </form>
-              <div class="watermark">
+              <div class="watermark scale-in-ver-top">
                 <img src="https://inm-baobab-prod-eu-west-1.s3.amazonaws.com/public/inm/media/image/115382043.JPG" width="300px" alt="">
           </div>
         </div>
