--- a/src/app/components/add-sport-tournament/add-sport-tournament.component.html
+++ b/src/app/components/add-sport-tournament/add-sport-tournament.component.html
@@ -91,7 +91,7 @@
                 
           
            
-            <div class="watermark">
+            <div class="watermark scale-in-ver-top">
                 <img src="https://inm-baobab-prod-eu-west-1.s3.amazonaws.com/public/inm/media/image/115382043.JPG" width="300px" alt="">
           </div>
         </div>
