--- a/src/app/components/add-country/add-country.component.html
+++ b/src/app/components/add-country/add-country.component.html
@@ -24,7 +24,7 @@
                        
                         <td>  <img src="https://www.countryflags.io/{{cnt.flagurl}}/flat/64.png" alt=""> </td>
                         <td>  
-                                <button  class="btn btn btn-success">Edit</button> |
+                                <button (click)="LoadDataForEdit(cnt.countryid)" class="btn btn btn-success">Edit</button> |
                             <button  (click)="delete(cnt.countryid)" class="btn btn btn-danger">Delete</button>
                         </td>  
                     </tr>  
