--- a/src/app/components/add-markets/add-markets.component.html
+++ b/src/app/components/add-markets/add-markets.component.html
@@ -21,7 +21,7 @@
                     <tr *ngFor="let cnt of market">  
                         <td>{{ cnt.markeType }}</td>  
                         <td>  
-                                <button  class="btn btn btn-success">Edit</button> |
+                                <button  (click)="LoadDataForEdit(cnt.marketId)" class="btn btn btn-success">Edit</button> |
                             <button (click)="delete(cnt.marketId)"  class="btn btn btn-danger">Delete</button>
                         </td>  
                     </tr>  
@@ -37,8 +37,11 @@
                   </div>
                
                 </div>
-                <button (click)="onFormSubmit()" style="margin-top: 10px; background-color: #7386d5; border-radius: 0%; border: none;" class="btn btn btn-primary btn-block">Add</button>
-              </form>
+                <button (click)="onFormSubmit()" style="margin-top: 10px; background-color: #7386d5; border-radius: 0%; border: none;" class="btn btn btn-primary btn-block">{{title}}</button>
+                <ng-template [ngIf]="count===0">
+                    <button (click)="resertForm()" style="margin-top: 10px; background-color: #d2c14d; border-radius: 0%; border: none;" class="btn btn btn-primary btn-block">Cancel</button>
+                </ng-template>   
+            </form>
               <div class="watermark">
                 <img src="https://inm-baobab-prod-eu-west-1.s3.amazonaws.com/public/inm/media/image/115382043.JPG" width="300px" alt="">
           </div>
