--- a/src/app/components/add-country/add-country.component.html
+++ b/src/app/components/add-country/add-country.component.html
@@ -18,7 +18,7 @@
                 </thead>  
                 <tbody>  
                     <tr *ngFor="let cnt of country">  
-                        <td>{{cnt.flagurl}}</td>
+                        <td>{{cnt.name}}</td>
                        
                         <td>  <img src="https://www.countryflags.io/{{cnt.flagurl}}/flat/64.png" alt=""> </td>
                         <td>  
