--- a/src/app/components/add-sport-country/add-sport-country.component.html
+++ b/src/app/components/add-sport-country/add-sport-country.component.html
@@ -27,7 +27,7 @@
                         <td>  <img src="https://www.countryflags.io/{{cnt.flagurl}}/flat/64.png" alt=""> </td>
                        
                         <td>  
-                                <button  class="btn btn btn-success">Edit</button> |
+                                <button (click)="LoadDataForEdit(cnt.sportCountryId,cnt.sportCountryId,cnt.sportCountryId)" class="btn btn btn-success">Edit</button> |
                             <button (click)="delete(cnt.sportCountryId)"  class="btn btn btn-danger">Delete</button>
                         </td>  
                     </tr>  
