--- a/src/styles.css
+++ b/src/styles.css
@@ -66,4 +66,11 @@ html,body{
       opacity: 1;
     }
   }
-  
+
+
+  .dropdown-menu a:hover {
+        background-color: #e7ce33 !important;
+        background-image: none !important;
+        
+        border-radius: 0% !important;
+    }
